try to enable e2e with dates

--- a/generators/react-native/templates/e2e/entities/_entityFile_.spec.js.ejs
+++ b/generators/react-native/templates/e2e/entities/_entityFile_.spec.js.ejs
@@ -51,7 +51,7 @@ Date.prototype.toCustomLocalDate = function() {
 }
 _%>
 
-describe<%- authenticationTypeOauth2 || anyFieldIsBlobDerived || anyFieldIsDateDerived ? '.skip' : '' %>('<%= entityNameCapitalized %> Screen Tests', () => {
+describe<%- authenticationTypeOauth2 || anyFieldIsBlobDerived ? '.skip' : '' %>('<%= entityNameCapitalized %> Screen Tests', () => {
   beforeEach(async () => {
     await reloadApp();
     await loginAsUser();
