fix detox e2e tests for entities (#1650)
* try to enable e2e test at entities

* Update utils.js.ejs

* Update _entityFile_.spec.js.ejs

* Update _entityFile_.spec.js.ejs

* Update utils.js.ejs

* Update utils.js.ejs

* Update _entityFile_.spec.js.ejs

* try to enable e2e with dates

--- a/generators/react-native/templates/e2e/entities/_entityFile_.spec.js.ejs
+++ b/generators/react-native/templates/e2e/entities/_entityFile_.spec.js.ejs
@@ -1,5 +1,5 @@
 <%_ if (anyFieldIsDateDerived) { _%>
-const jestExpect = require('expect');
+const { expect: jestExpect } = require('expect');
 <%_ } _%>
 const {
     reloadApp,
@@ -51,7 +51,7 @@ Date.prototype.toCustomLocalDate = function() {
 }
 _%>
 
-describe.skip('<%= entityNameCapitalized %> Screen Tests', () => {
+describe<%- authenticationTypeOauth2 || anyFieldIsBlobDerived ? '.skip' : '' %>('<%= entityNameCapitalized %> Screen Tests', () => {
   beforeEach(async () => {
     await reloadApp();
     await loginAsUser();
