--- a/generators/react-native/templates/e2e/utils.js.ejs
+++ b/generators/react-native/templates/e2e/utils.js.ejs
@@ -81,7 +81,7 @@ const toggleSwitchToValue = async (switchId, targetValue) => {
 const scrollTo = async (fieldId, listId, size = 0.15, direction = 'up', speed = 'slow') => {
   await waitFor(element(by.id(fieldId)))
     .toBeVisible()
-    .whileElement(by.type('ABI49_0_0RCTScrollView').withAncestor(by.id(listId)))
+    .whileElement(by.id(listId))
     .scroll(500, 'down');
 };
 
@@ -144,6 +144,7 @@ const reloadApp = async (bailOnFailure) => {
       newInstance: true,
       launchArgs: {
         detoxEnableSynchronization: false,
+        permissions: { camera: 'YES', photo: 'YES' },
         // Don't show developer menu.
         EXKernelDisableNuxDefaultsKey: true,
       },
