--- a/generators/react-native/templates/app/navigation/nav-container.js.ejs
+++ b/generators/react-native/templates/app/navigation/nav-container.js.ejs
@@ -169,8 +169,8 @@ function NavContainer(props) {
         getAccount();
       }
     };
-    AppState.addEventListener('change', handleChange);
-    return () => AppState.removeEventListener('change', handleChange);
+    const sub = AppState.addEventListener('change', handleChange);
+    return () => sub.remove();
   }, [getAccount]);
 
   useReduxDevToolsExtension(navigationRef);
