Upgrade expo to 51.0.11 (#1652)
* bump expo version

* bump expo to 51.0.10

* adjusts

* load package.json

* use registerRootComponent

* Update utils.js.ejs

* Update package.json

* Remove npx expo-doctor

* Use 51.0.0 which uses expoVersion: "~51.0.11"

* Fix Cannot read properties of undefined (reading 'displayName')

* Change Linking.makeURL to Linking.createURI

* Fix setImmediate is not defined

* Change Ionicons to remove md- prefix

* Fix icon positioning

* Rename icon

* Remove prettier as recommended by npx expo-doctor@latest

* Migrate from deprecated method: AppState.removeEventListener

* Move fetch constant above effect that calls it

* Don't downgrade TypeScript

* Bump jest-expo to 51.0.2

* Update patch versions and match expo

---------

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Matt Raible <matt@raibledesigns.com>

--- a/generators/react-native/templates/App.js.ejs
+++ b/generators/react-native/templates/App.js.ejs
@@ -2,6 +2,7 @@ import * as React from 'react';
 import { Provider } from 'react-redux';
 import createStore from './app/shared/reducers';
 import * as SplashScreen from 'expo-splash-screen';
+import 'setimmediate';
 
 import NavContainer from './app/navigation/nav-container';
 
