--- a/generators/react-native/templates/package.json.ejs
+++ b/generators/react-native/templates/package.json.ejs
@@ -21,12 +21,12 @@
     "precommit": "lint-staged",
 <%_ } _%>
     "postinstall": "patch-package",
-    "prettier": "prettier --write \"{,.,**/,.jhipster/**/}*.{md,json,yml,js,ts,tsx}\"",
     "start": "expo start",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "EXPO_REPLACE_WITH_VERSION",
+    "@expo/metro-runtime": "EXPO_REPLACE_WITH_VERSION",
     "@react-native-async-storage/async-storage": "EXPO_REPLACE_WITH_VERSION",
     "@react-native-community/datetimepicker": "EXPO_REPLACE_WITH_VERSION",
     "@react-native-masked-view/masked-view": "EXPO_REPLACE_WITH_VERSION",
