--- a/generators/react-native/templates/storybook/storybook.requires.ts.ejs
+++ b/generators/react-native/templates/storybook/storybook.requires.ts.ejs
@@ -6,11 +6,13 @@ import {
   getProjectAnnotations,
 } from "@storybook/react-native";
 
+/*
 import "@storybook/addon-ondevice-notes/register";
 import "@storybook/addon-ondevice-controls/register";
 import "@storybook/addon-ondevice-knobs/register";
 import "@storybook/addon-ondevice-backgrounds/register";
 import "@storybook/addon-ondevice-actions/register";
+*/
 
 const normalizedStories = [
   {
@@ -49,7 +51,7 @@ declare global {
 const annotations = [
   require("./preview"),
   require("@storybook/react-native/dist/preview"),
-  require("@storybook/addon-actions/preview"),
+  // require("@storybook/addon-actions/preview"),
 ];
 
 global.STORIES = normalizedStories;
