--- a/generators/react-native/templates/storybook/storybook.requires.ts.ejs
+++ b/generators/react-native/templates/storybook/storybook.requires.ts.ejs
@@ -49,7 +49,7 @@ declare global {
 }
 
 const annotations = [
-  require("./preview"),
+  // require("./preview"),
   require("@storybook/react-native/dist/preview"),
   // require("@storybook/addon-actions/preview"),
 ];
