Use recommendation for setting storage

--- a/generators/react-native/templates/storybook/index.js.ejs
+++ b/generators/react-native/templates/storybook/index.js.ejs
@@ -9,6 +9,13 @@ configure(() => {
   require('./stories')
 }, module)
 
-const StorybookUIRoot = AppConfig.debugMode ? getStorybookUI({ asyncStorage: AsyncStorage }) : View;
+const StorybookUIRoot = AppConfig.debugMode
+  ? getStorybookUI({
+      storage: {
+        getItem: AsyncStorage.getItem,
+        setItem: AsyncStorage.setItem,
+      },
+    })
+  : View;
 
 export default StorybookUIRoot
