--- a/generators/react-native/templates/storybook/index.js.ejs
+++ b/generators/react-native/templates/storybook/index.js.ejs
@@ -1,4 +1,5 @@
 import { getStorybookUI, configure } from '@storybook/react-native/V6'
+import './storybook.requires';
 import { View } from 'react-native'
 import AsyncStorage from '@react-native-async-storage/async-storage';
 import AppConfig from '../app/config/app-config';
@@ -8,6 +9,13 @@ configure(() => {
   require('./stories')
 }, module)
 
-const StorybookUIRoot = AppConfig.debugMode ? getStorybookUI({ asyncStorage: AsyncStorage }) : View;
+const StorybookUIRoot = AppConfig.debugMode
+  ? getStorybookUI({
+      storage: {
+        getItem: AsyncStorage.getItem,
+        setItem: AsyncStorage.setItem,
+      },
+    })
+  : View;
 
 export default StorybookUIRoot
