use prettier from generator-jhipster.

--- a/generators/react-native/templates/package.json.ejs
+++ b/generators/react-native/templates/package.json.ejs
@@ -113,7 +113,7 @@
     "mockery": "REPLACE_WITH_VERSION",
     "patch-package": "REPLACE_WITH_VERSION",
     "path-exists": "REPLACE_WITH_VERSION",
-    "prettier": "REPLACE_WITH_VERSION",
+    "prettier": null,
     "react-test-renderer": "REPLACE_WITH_VERSION",
     "resolve": "REPLACE_WITH_VERSION",
     "rimraf": "REPLACE_WITH_VERSION",
