--- a/generators/react-native/templates/package.json.ejs
+++ b/generators/react-native/templates/package.json.ejs
@@ -25,101 +25,101 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "EXPO_REPLACE_WITH_VERSION",
-    "@expo/metro-runtime": "EXPO_REPLACE_WITH_VERSION",
-    "@react-native-async-storage/async-storage": "EXPO_REPLACE_WITH_VERSION",
-    "@react-native-community/datetimepicker": "EXPO_REPLACE_WITH_VERSION",
-    "@react-native-masked-view/masked-view": "EXPO_REPLACE_WITH_VERSION",
-    "@react-native-picker/picker": "EXPO_REPLACE_WITH_VERSION",
-    "@react-navigation/devtools": "EXPO_REPLACE_WITH_VERSION",
-    "@react-navigation/drawer": "REPLACE_WITH_VERSION",
-    "@react-navigation/native": "REPLACE_WITH_VERSION",
-    "@react-navigation/stack": "REPLACE_WITH_VERSION",
-    "apisauce": "REPLACE_WITH_VERSION",
-    "expo": "EXPO_REPLACE_WITH_VERSION",
-    "expo-status-bar": "EXPO_REPLACE_WITH_VERSION",
+    "@expo/vector-icons": null,
+    "@expo/metro-runtime": null,
+    "@react-native-async-storage/async-storage": null,
+    "@react-native-community/datetimepicker": null,
+    "@react-native-masked-view/masked-view": null,
+    "@react-native-picker/picker": null,
+    "@react-navigation/devtools": null,
+    "@react-navigation/drawer": null,
+    "@react-navigation/native": null,
+    "@react-navigation/stack": null,
+    "apisauce": null,
+    "expo": null,
+    "expo-status-bar": null,
     <%_ if (authenticationType === 'oauth2') { _%>
-    "expo-auth-session": "EXPO_REPLACE_WITH_VERSION",
-    "expo-random": "EXPO_REPLACE_WITH_VERSION",
-    "expo-web-browser": "EXPO_REPLACE_WITH_VERSION",
+    "expo-auth-session": null,
+    "expo-random": null,
+    "expo-web-browser": null,
     <%_ } _%>
-    "expo-constants": "EXPO_REPLACE_WITH_VERSION",
-    "expo-image-picker": "EXPO_REPLACE_WITH_VERSION",
-    "expo-linking": "EXPO_REPLACE_WITH_VERSION",
-    "expo-splash-screen": "EXPO_REPLACE_WITH_VERSION",
-    "format-json": "REPLACE_WITH_VERSION",
-    "formik": "REPLACE_WITH_VERSION",
-    "identity-obj-proxy": "REPLACE_WITH_VERSION",
-    "lodash": "REPLACE_WITH_VERSION",
-    "querystringify": "REPLACE_WITH_VERSION",
-    "ramda": "REPLACE_WITH_VERSION",
-    "react-datepicker": "REPLACE_WITH_VERSION",
-    "react": "EXPO_REPLACE_WITH_VERSION",
-    "react-dom": "EXPO_REPLACE_WITH_VERSION",
-    "react-native": "EXPO_REPLACE_WITH_VERSION",
-    "react-native-gesture-handler": "EXPO_REPLACE_WITH_VERSION",
-    "react-native-keyboard-aware-scroll-view": "REPLACE_WITH_VERSION",
-    "react-native-modal-datetime-picker": "REPLACE_WITH_VERSION",
-    "react-native-picker-select": "REPLACE_WITH_VERSION",
-    "react-native-reanimated": "EXPO_REPLACE_WITH_VERSION",
-    "react-native-safe-area-context": "EXPO_REPLACE_WITH_VERSION",
-    "react-native-screens": "EXPO_REPLACE_WITH_VERSION",
-    "react-native-sectioned-multi-select": "REPLACE_WITH_VERSION",
-    "react-native-web": "EXPO_REPLACE_WITH_VERSION",
-    "react-redux": "REPLACE_WITH_VERSION",
-    "redux": "REPLACE_WITH_VERSION",
-    "redux-persist": "REPLACE_WITH_VERSION",
-    "redux-saga": "REPLACE_WITH_VERSION",
-    "reduxsauce": "REPLACE_WITH_VERSION",
-    "seamless-immutable": "REPLACE_WITH_VERSION",
+    "expo-constants": null,
+    "expo-image-picker": null,
+    "expo-linking": null,
+    "expo-splash-screen": null,
+    "format-json": null,
+    "formik": null,
+    "identity-obj-proxy": null,
+    "lodash": null,
+    "querystringify": null,
+    "ramda": null,
+    "react-datepicker": null,
+    "react": null,
+    "react-dom": null,
+    "react-native": null,
+    "react-native-gesture-handler": null,
+    "react-native-keyboard-aware-scroll-view": null,
+    "react-native-modal-datetime-picker": null,
+    "react-native-picker-select": null,
+    "react-native-reanimated": null,
+    "react-native-safe-area-context": null,
+    "react-native-screens": null,
+    "react-native-sectioned-multi-select": null,
+    "react-native-web": null,
+    "react-redux": null,
+    "redux": null,
+    "redux-persist": null,
+    "redux-saga": null,
+    "reduxsauce": null,
+    "seamless-immutable": null,
     <%_ if (websocket !== 'no') { _%>
-    "webstomp-client": "REPLACE_WITH_VERSION",
-    "sockjs-client": "REPLACE_WITH_VERSION",
-    "net": "REPLACE_WITH_VERSION",
+    "webstomp-client": null,
+    "sockjs-client": null,
+    "net": null,
     <%_ } _%>
-    "yup": "REPLACE_WITH_VERSION"
+    "yup": null
   },
   "devDependencies": {
-    "@babel/core": "EXPO_REPLACE_WITH_VERSION",
-    "@babel/runtime": "REPLACE_WITH_VERSION",
-    "@config-plugins/detox": "REPLACE_WITH_VERSION",
-    "@react-native-community/eslint-config": "REPLACE_WITH_VERSION",
-    "@react-native-community/cli-server-api": "EXPO_REPLACE_WITH_VERSION",
-    "@redux-devtools/extension": "REPLACE_WITH_VERSION",
-    "@storybook/addons": "REPLACE_WITH_VERSION",
-    "@storybook/react-native": "REPLACE_WITH_VERSION",
-    "@storybook/theming": "REPLACE_WITH_VERSION",
-    "@testing-library/jest-native": "REPLACE_WITH_VERSION",
-    "@testing-library/react-native": "REPLACE_WITH_VERSION",
-    "@types/jest": "REPLACE_WITH_VERSION",
-    "@types/react": "EXPO_REPLACE_WITH_VERSION",
-    "babel-jest": "REPLACE_WITH_VERSION",
-    "babel-preset-env": "REPLACE_WITH_VERSION",
-    "buffer": "REPLACE_WITH_VERSION",
+    "@babel/core": null,
+    "@babel/runtime": null,
+    "@config-plugins/detox": null,
+    "@react-native-community/eslint-config": null,
+    "@react-native-community/cli-server-api": null,
+    "@redux-devtools/extension": null,
+    "@storybook/addons": null,
+    "@storybook/react-native": null,
+    "@storybook/theming": null,
+    "@testing-library/jest-native": null,
+    "@testing-library/react-native": null,
+    "@types/jest": null,
+    "@types/react": null,
+    "babel-jest": null,
+    "babel-preset-env": null,
+    "buffer": null,
     <%_ if (detox) { _%>
-    "detox": "REPLACE_WITH_VERSION",
-    "jest-circus": "REPLACE_WITH_VERSION",
+    "detox": null,
+    "jest-circus": null,
     <%_ } _%>
-    "eslint": "REPLACE_WITH_VERSION",
-    "eslint-config-prettier": "REPLACE_WITH_VERSION",
-    "eslint-plugin-prettier": "REPLACE_WITH_VERSION",
-    "expect": "REPLACE_WITH_VERSION",
+    "eslint": null,
+    "eslint-config-prettier": null,
+    "eslint-plugin-prettier": null,
+    "expect": null,
     "generator-jhipster-react-native": "<%= blueprintPackageVersion %>",
-    "jest": "REPLACE_WITH_VERSION",
-    "jest-expo": "EXPO_REPLACE_WITH_VERSION",
+    "jest": null,
+    "jest-expo": null,
     <%_ if (!skipCommitHook) { _%>
-    "lint-staged": "REPLACE_WITH_VERSION",
+    "lint-staged": null,
     <%_ } _%>
-    "mockery": "REPLACE_WITH_VERSION",
-    "patch-package": "REPLACE_WITH_VERSION",
-    "path-exists": "REPLACE_WITH_VERSION",
+    "mockery": null,
+    "patch-package": null,
+    "path-exists": null,
     "prettier": null,
-    "react-test-renderer": "REPLACE_WITH_VERSION",
-    "resolve": "REPLACE_WITH_VERSION",
-    "rimraf": "REPLACE_WITH_VERSION",
-    "tapable": "REPLACE_WITH_VERSION",
-    "ts-jest": "REPLACE_WITH_VERSION",
-    "typescript": "EXPO_REPLACE_WITH_VERSION"
+    "react-test-renderer": null,
+    "resolve": null,
+    "rimraf": null,
+    "tapable": null,
+    "ts-jest": null,
+    "typescript": null
   },
   <%_ if (!skipCommitHook) { _%>
   "lint-staged": {
