--- a/generators/react-native/templates/package.json.ejs
+++ b/generators/react-native/templates/package.json.ejs
@@ -11,7 +11,8 @@
     "test:watch": "jest --watch",
     "updateSnapshot": "jest --updateSnapshot",
     "coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
-    "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
+    "lint": "eslint",
+    "pretest": "npm run lint",
     "test": "jest",
     "publish": "expo publish",
     "build:ios": "expo build:ios",
@@ -83,7 +84,7 @@
     "@babel/core": null,
     "@babel/runtime": null,
     "@config-plugins/detox": null,
-    "@react-native-community/eslint-config": null,
+    "@eslint/js": null,
     "@react-native-community/cli-server-api": null,
     "@redux-devtools/extension": null,
     "@storybook/addons": null,
@@ -96,20 +97,23 @@
     "babel-jest": null,
     "babel-preset-env": null,
     "buffer": null,
-    <%_ if (detox) { _%>
+<%_ if (detox) { _%>
     "detox": null,
     "jest-circus": null,
-    <%_ } _%>
+<%_ } _%>
     "eslint": null,
     "eslint-config-prettier": null,
     "eslint-plugin-prettier": null,
+    "eslint-plugin-react": null,
+    "eslint-plugin-react-hooks": null,
     "expect": null,
+    "globals": null,
     "generator-jhipster-react-native": "<%= blueprintPackageVersion %>",
     "jest": null,
     "jest-expo": null,
-    <%_ if (!skipCommitHook) { _%>
+<%_ if (!skipCommitHook) { _%>
     "lint-staged": null,
-    <%_ } _%>
+<%_ } _%>
     "mockery": null,
     "patch-package": null,
     "path-exists": null,
