add eslint-plugin-jest and others adjusts

--- a/generators/react-native/templates/package.json.ejs
+++ b/generators/react-native/templates/package.json.ejs
@@ -103,6 +103,7 @@
 <%_ } _%>
     "eslint": null,
     "eslint-config-prettier": null,
+    "eslint-plugin-jest": null,
     "eslint-plugin-prettier": null,
     "eslint-plugin-react": null,
     "eslint-plugin-react-hooks": null,
@@ -123,7 +124,8 @@
     "rimraf": null,
     "tapable": null,
     "ts-jest": null,
-    "typescript": null
+    "typescript": null,
+    "typescript-eslint": null
   },
   <%_ if (!skipCommitHook) { _%>
   "lint-staged": {
