--- a/generators/react-native/templates/eslint.config.js.jhi.react-native.ejs
+++ b/generators/react-native/templates/eslint.config.js.jhi.react-native.ejs
@@ -18,6 +18,7 @@
 -%>
 <&_ if (fragment.importsSection) { -&>
 import eslint from '@eslint/js';
+import jest from 'eslint-plugin-jest';
 import react from 'eslint-plugin-react';
 import reactHooks from 'eslint-plugin-react-hooks';
 <&_ } -&>
@@ -38,6 +39,7 @@ import reactHooks from 'eslint-plugin-react-hooks';
   },
   {
     files: ['test/**/*.js', 'e2e/**/*.js'],
+    ...jest.configs['flat/recommended'],
     languageOptions: {
       globals: {
         ...globals.jest,
@@ -46,6 +48,7 @@ import reactHooks from 'eslint-plugin-react-hooks';
     },
   },
   {
+    // Detox globals
     files: ['e2e/**/*.js'],
     languageOptions: {
       globals: {
